WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186091
WebKit memory management: Safari jetsams on some websites when zooming and scrolling
https://bugs.webkit.org/show_bug.cgi?id=186091
Summary
WebKit memory management: Safari jetsams on some websites when zooming and sc...
Antti Koivisto
Reported
2018-05-30 07:24:46 PDT
Summary: Using the zoom function on a few websites is causing a crash of Safari Steps to Reproduce: Go on www.uk-koeln.de or www.huettenhospital.de and use the zoom function a few times in a short time.
Attachments
patch
(4.77 KB, patch)
2018-05-30 07:43 PDT
,
Antti Koivisto
ggaren
: review+
Details
Formatted Diff
Diff
patch
(4.38 KB, patch)
2018-05-31 04:43 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(4.38 KB, patch)
2018-05-31 04:45 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2018-05-30 07:25:05 PDT
<
rdar://problem/36315010
>
Antti Koivisto
Comment 2
2018-05-30 07:43:57 PDT
Created
attachment 341572
[details]
patch
Geoffrey Garen
Comment 3
2018-05-30 10:02:27 PDT
Comment on
attachment 341572
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=341572&action=review
r=me
> Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:2896 > - > +
Boo whitespace change.
Simon Fraser (smfr)
Comment 4
2018-05-30 10:59:34 PDT
Comment on
attachment 341572
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=341572&action=review
> Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:308 > + return FloatRect(exposedRect.x() - horizontalChange / 2, exposedRect.y() - verticalChange / 2, exposedRect.width() + horizontalChange, exposedRect.height() + verticalChange);
Use FloatRect::expand()!
Antti Koivisto
Comment 5
2018-05-31 04:43:38 PDT
Created
attachment 341657
[details]
patch
Antti Koivisto
Comment 6
2018-05-31 04:45:30 PDT
Created
attachment 341658
[details]
patch
WebKit Commit Bot
Comment 7
2018-05-31 10:55:49 PDT
Comment on
attachment 341658
[details]
patch Clearing flags on attachment: 341658 Committed
r232356
: <
https://trac.webkit.org/changeset/232356
>
WebKit Commit Bot
Comment 8
2018-05-31 10:55:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug